fixed spacing on home page

--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -38,7 +38,7 @@ section.content > aside {
 iframe {
 	width: 760px;
 	border: none;
-	height: 500px;
+	height: 404px;
 	overflow: hidden;
 }
 
